# AgileVehicle

./: Avatar.txt  README.md  clean.sh  make.sh  run.sh
.metadata/.plugins/org.eclipse.cdt.core/: SteeringWheelControl.1484213459341.pdom  language.settings.xml  shareddefaults.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: SteeringWheelControl.sc
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  2.tree  4.tree  5.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: SteeringWheelControl.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
ADAMS-Matlab/: AgileV_4WD.cmd  AgileV_4WD.m  MODEL_1.cmd  MODEL_4WD.cmd  adams_plant.mexw64  adams_sys_.slx
Arduino/anglemotor_only/: anglemotor_only.ino
Arduino/first version/: TotalControl.ino
DynaCore/: kinematicCtrl.cpp
LogitechFFDrivers/: Makefile  README
LogitechFFDrivers/KLGD/: .built-in.o.cmd  .klgd.ko.cmd  .klgd.mod.o.cmd  .klgd.o.cmd  Makefile  Module.symvers  README.md  klgd.c  klgd.h  klgd.ko  klgd.mod.c  modules.order
LogitechFFDrivers/KLGD/.tmp_versions/: klgd.mod
LogitechFFDrivers/KLGDFF/: buildall.sh
LogitechFFDrivers/KLGDFF/plugin/: .built-in.o.cmd  .klgd_ff_plugin.ko.cmd  .klgd_ff_plugin.mod.o.cmd  .klgd_ff_plugin.o.cmd  Makefile  Module.symvers  klgd_ff_plugin.c  klgd_ff_plugin.h  klgd_ff_plugin.ko  klgd_ff_plugin.mod.c  klgd_ff_plugin_p.h  modules.order
LogitechFFDrivers/KLGDFF/plugin/.tmp_versions/: klgd_ff_plugin.mod
LogitechFFDrivers/KLGDFF/testmod/: Makefile  klgdff.c
LogitechFFDrivers/hid/: .built-in.o.cmd  .hid-core.o.cmd  .hid-debug.o.cmd  .hid-input.o.cmd  .hid.ko.cmd  .hid.mod.o.cmd  .hid.o.cmd  .hidraw.o.cmd  Makefile  Module.symvers  hid-core.c  hid-input.c  hid.ko  hid.mod.c  modules.order
LogitechFFDrivers/hid-logitech/: .built-in.o.cmd  .hid-lg.o.cmd  .hid-lg2ff.o.cmd  .hid-lg3ff.o.cmd  .hid-lg4ff.o.cmd  .hid-lgff.o.cmd  .hid-logitech.ko.cmd  .hid-logitech.mod.o.cmd  .hid-logitech.o.cmd  Makefile  Module.symvers  hid-lg.c  hid-lg4ff.c  hid-logitech.ko  hid-logitech.mod.c  modules.order
LogitechFFDrivers/hid-logitech-hidpp/: .built-in.o.cmd  .hid-logitech-hidpp.ko.cmd  .hid-logitech-hidpp.mod.o.cmd  .hid-logitech-hidpp.o.cmd  Makefile  hid-ids.h  hid-logitech-hidpp.c  hid-logitech-hidpp.ko  hid-logitech-hidpp.mod.c  modules.order
LogitechFFDrivers/hid-logitech-hidpp/.tmp_versions/: hid-logitech-hidpp.mod
LogitechFFDrivers/hid-logitech/.tmp_versions/: hid-logitech.mod
LogitechFFDrivers/hid/.tmp_versions/: hid.mod
Motor Control/: PWMSignalGenerator.ino
ROS/Arduino/: Arduino-Mega.ino  Arduino.ino  bootstrap.sh  code.ino  ros_customized.h  struct.h
ROS/Arduino_0/: Arduino_0.ino
ROS/Arduino_1/: Arduino_1.ino
ROS/Arduino_2/: Arduino_2.ino
ROS/Arduino_3/: Arduino_3.ino
ROS/SteeringWheel/: SteeringWheel.cpp
ROS/WheelMCU_DUE/: WheelMCU_DUE.ino  ros_customized.h
ROS/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS/devel/include/agile_v_core/: electric.h  joyinfoex.h  kinematics.h
ROS/devel/include/steering_wheel/: joyinfoex.h
ROS/devel/include/virtual_device_debugger/: joyinfoex.h
ROS/devel/lib/agile_v_core/: .fuse_hidden0000088b0000000d  .fuse_hidden0000091400000010  .fuse_hidden0000099c00000014  .fuse_hidden000009e300000016  .fuse_hidden00000a6c0000001a  .fuse_hidden00000d2300000022  agile_v_core_node
ROS/devel/lib/pkgconfig/: agile_v_core.pc  agile_v_ctrl.pc  agile_v_path_planning.pc  agile_v_vision.pc  steering_wheel.pc  virtual_device_debugger.pc  virtual_devvice_debugger.pc
ROS/devel/lib/steering_wheel/: .fuse_hidden0000035000000011  steering_wheel_node
ROS/devel/lib/virtual_device_debugger/: .fuse_hidden000003d000000008  .fuse_hidden0000040800000009  .fuse_hidden000005a800000008  .fuse_hidden00000eed00000037  virtual_device_debugger_node  virtual_vehicle_node
ROS/src/agile_v_core/: AgileVehicle-simulator.launch  AgileVehicle.launch  AgileVehicle.launch.old  CMakeLists.txt  package.xml  setup.sh
ROS/src/agile_v_core/msg/: electric.msg  joyinfoex.msg  kinematics.msg
ROS/src/agile_v_core/src/: GUI.cpp  coordHandling.cpp  encoder.h  end_publisher.cpp  kinematicCtrl.cpp  main.cpp  setup.cpp  subscribers.cpp
ROS/src/agile_v_ctrl/: CMakeLists.txt  package.xml
ROS/src/agile_v_path_planning/: CMakeLists.txt  package.xml
ROS/src/agile_v_vision/: CMakeLists.txt  package.xml
ROS/src/steering_wheel/: CMakeLists.txt  SyncMan.launch  package.xml
ROS/src/virtual_device_debugger/: CMakeLists.txt  package.xml
ROS/src/virtual_devvice_debugger/: CMakeLists.txt  package.xml
SteeringWheelControl/: .cproject  .project
SteeringWheelControl/src/: Serial.cpp  SerialClass.h  main.cpp
joystick_status/: Makefile
joystick_status/TControl/: Migration.h  Migration.h.gch  Serial.cpp  Serial.old.cpp  SerialClass.h  SerialClass.h.gch  Serial_Win.cpp  TControl.sln  TControl.vcxproj  TControl.vcxproj.filters  auto_tchar.h.gch  main.cpp
joystick_status/docs/: inputattach.1
joystick_status/utils/: inputattach.c
joystick_utils/: NEWS  README
joystick_utils/docs/: Makefile  list-inputattach-modes
joystick_utils/utils/: Makefile  js-set-enum-leds
libelas/elas-cv-gpu/: CMakeLists.txt
libelas/elas-cv-gpu/src/: camera.cpp  elasWrapper.cpp  opticalFlowThread.cpp  stereoCamera.cpp
libelas_opencv_test/: CMakeLists.txt  README.TXT
libelas_opencv_test/build_cv - 副本/OpenCV Project v3.1.01/: OpenCV Project v3.1.01.sln
libelas_opencv_test/build_cv/OpenCV Project v3.1.01/: OpenCV Project v3.1.01.sln
libelas_opencv_test/matlab/: make.m
libelas_opencv_test/src/: capture.cpp  image.h  main.cpp
without_ROS.old/Arduino/: importFlexiTimer2.sh
without_ROS.old/SteeringWheelControl/: .cproject
without_ROS.old/SteeringWheelControl/src/: Migration.h  auto_tchar.h  main.cpp
(+119 files in other folders)
